--- a/web/views/detail.html.twig
+++ b/web/views/detail.html.twig
@@ -1,3 +1,25 @@
-{{query}}
-{{dump(result)}}
+{#query}}
+{{dump(result)#}
 {{dump(fiche)}}
+
+<div id="content">
+
+	<div id="fiche">
+		<div id="image"><img src="images/pz3.png" /></div>
+        <div id="nom"><h3><p>Pzkpfw III Ausf J - Technical File</p><h3></div>
+       	<div class="rowfile"> <div class="caract">Manufacturers</div> <div class="data">Henschel - Man - MNH - Daimler Benz</div> </div>
+        <div class="rowfile">	<div class="caract">Running Gear</div> <div class="data">Tracks</div> </div>
+		<div class="rowfile">	<div class="caract">Role</div> <div class="data">{{fiche.1}}</div> </div>
+        <div class="rowfile">	<div class="caract">Crew</div> <div class="data">5</div> </div>
+        <div class="rowfile">	<div class="caract">Main Armement(mm)</div> <div class="data">50</div> </div>
+        <div class="rowfile">	<div class="caract">Dimension(Length - Width - Height)(m) </div> <div class="data">5.56 - 2.95 - 2.50 </div> </div>
+        <div class="rowfile">	<div class="caract">Power(hp)</div> <div class="data">300</div> </div>
+        <div class="rowfile">	<div class="caract">Weight(tons)</div> <div class="data">21</div> </div>
+        <div class="rowfile">	<div class="caract">Max speed(km/h)</div> <div class="data">40</div></div>
+        
+
+	</div><!-- fin fiche-->
+
+
+	
+</div><!-- fin content -->
