--- a/web/views/fiche.html.twig
+++ b/web/views/fiche.html.twig
@@ -8,7 +8,7 @@
 
 {{ dump(fiche) #}
     
- <h4> MacBook Air 13.3 256Go</h4>
+ <h4> {{reference}}</h4>
  
 <div class="table-responsive">
   <table class="table">
