Gestion de la liste.

--- a/web/views/detail.html.twig
+++ b/web/views/detail.html.twig
@@ -1,3 +1,13 @@
 {{query}}
 {{dump(result)}}
 {{dump(fiche)}}
+using o for i"http://psi.ontopedia.net/"
+o:prix (o:YY1204FDPIXIE, $prix)
+o:consommable ($consommable, o:apourconsommable, o:YY1204FDPIXIE, o:estlecomsommablede)
+o:preparation ($preparation, o:estlapreparationde, o:YY1204FDPIXIE, o:apourpreparation)
+o:pression ($pression, o:apourpression, o:YY1204FDPIXIE, o:estlapressionde)
+o:garantie ($garantie, o:apourgarantie, o:YY1204FDPIXIE, o:estlagarantiede)
+o:puissance ($puissance, o:apourpuissance, o:YY1204FDPIXIE, o:estlapuissancede)
+o:marque ($marque, o:estlamarquede, o:YY1204FDPIXIE, o:apourmarque)
+o:couleur (o:YY1204FDPIXIE, $couleur)
+o:reference (o:YY1204FDPIXIE, $reference)
